--- a/registration_form.html
+++ b/registration_form.html
@@ -109,7 +109,7 @@
                 
                 // Reindirizza alla pagina di login dopo un breve ritardo
                 setTimeout(function() {
-                    window.location.href = 'login.html';
+                    window.location.href = 'login_form.html';
                 }, 2000);
             } else {
                 // Mostra messaggio di errore
